aks-cluster/opensearch/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
