aks-cluster/opensearch/62-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelevents
  namespace: monitoring
  labels:
    app: otelevents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otelevents
  template:
    metadata:
      labels:
        app: otelevents
    spec:
      serviceAccountName: otelevents
      containers:
      - name: otelevents
        image: otel/opentelemetry-collector-contrib
        args: ["--config", "/etc/config/config.yaml"]
        volumeMounts:
        - name: config
          mountPath: /etc/config
        imagePullPolicy: IfNotPresent
      volumes:
        - name: config
          configMap:
            name: otelevents
