aks-cluster/opensearch/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: monitoring
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
  annotations:
    majorVersion: "2"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/instance: opensearch
  replicas: 1
  template:
    metadata:
      name: opensearch
      labels:
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/instance: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:latest
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 3
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        - name: metrics
          containerPort: 9600
        resources:
          requests:
            cpu: 1000m
            memory: 100Mi
        volumeMounts:
        - name: data
          mountPath: /usr/share/opensearch/data
        - name: config
          mountPath: /usr/share/opensearch/config/opensearch.yml
          subPath: opensearch.yml
      volumes:
      - name: config
        configMap:
          defaultMode: 438
          name: opensearch-config
      - name: data
        emptyDir:
          medium: Memory
---
kind: Service
apiVersion: v1
metadata:
  name: opensearch
  namespace: monitoring
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
  - name: metrics
    protocol: TCP
    port: 9600
